# C-problems

./: CMakeLists.txt  problemPuntero_1.cpp  problem_1.cpp  problem_10.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_6.cpp  problem_7.cpp  problem_8.cpp  problem_9.cpp
