cmake_minimum_required(VERSION 3.24)
project(C___problems)

set(CMAKE_CXX_STANDARD 98)

add_executable(main main.cpp problem_1.cpp)
add_executable(problem_1 problem_1.cpp)
add_executable(problem_2 problem_2.cpp)
add_executable(problem_3 problem_3.cpp)
add_executable(problem_4 problem_4.cpp)
add_executable(problem_5 problem_5.cpp)
add_executable(problem_6 problem_6.cpp)
add_executable(problem_7 problem_7.cpp)
add_executable(problem_8 problem_8.cpp)
add_executable(problem_9 problem_9.cpp)
add_executable(problem_10 problem_10.cpp)
add_executable(problemPuntero_1 problemPuntero_1.cpp)